--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </div>
         </section>
         <!--===== ABOUT =====-->
-        <section class="about section " id="about">
+        <section class="about section " id="about" style="height: 100vh;">
             <h2 class="section-title">About</h2>
 
             <div class="about__container bd-grid">
@@ -67,7 +67,7 @@
             </div>
         </section>
         <!--===== SKILLS =====-->
-        <section class="skills section" id="skills">
+        <section class="skills section" id="skills" style="height: 100vh;">
             <h2 class="section-title">Skills</h2>
 
             <div class="skills__container bd-grid">
