--- a/index.html
+++ b/index.html
@@ -29,16 +29,16 @@
                     <li class="nav__item"><a href="#work" class="nav__link">Work</a></li>
                 </ul>
             </div>
-            <div class="nav__toggle" id="nav-toggle">
+<!--             <div class="nav__toggle" id="nav-toggle">
                 <i class='bx bx-menu'></i>
-            </div>
+            </div> -->
         </nav>
     </header>
 
     <main class="l-main" id="home">
         <!--===== HOME =====-->
         <section class="home section" style="width: 70%; margin: auto;" id="home">
-            <h2 class="section-title" style="opacity: 0;">&nbsp;</h2>
+            <h2 class="section-title" style="opacity: 0; margin-bottom: 20px;">&nbsp;</h2>
             <div class="skills__container bd-grid">
                 <div>
                     <h3 class="home__title">Hola,<br>I'am <span class="home__title-color">Sanskruti</span><br>A Digital
