--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <main class="l-main" id="home">
         <!--===== HOME =====-->
         <section class="home section" style="width: 70%; margin: auto;" id="home">
-            <h2 class="section-title" style="opacity: 0; margin-bottom: 20px;">&nbsp;</h2>
+            <h2 class="section-title section-title1" style="opacity: 0; margin-bottom: 20px;">&nbsp;</h2>
             <div class="skills__container bd-grid">
                 <div>
                     <h3 class="home__title">Hola,<br>I'am <span class="home__title-color">Sanskruti</span><br>A Digital
